# convo-forge

./: .gitignore  Cargo.toml  LICENSE  build.rs  changelog.md  readme.md
.github/workflows/: run_tests.yml
LICENSES/: ureq-MIT
docs/: commands.md  todo.md  tools.md
src/: command_complete.rs  commands.rs  config.rs  dep_config.rs  history_file.rs  main.rs  ollama_client.rs  processor.rs  test_support.rs  user_input.rs
src/api/: anthropic_client.rs  client_util.rs  mod.rs  ollama_client.rs
src/command/: command_complete.rs  command_util.rs  commands.rs  mod.rs  processor.rs
src/command/commands_impl/: clear.rs  context.rs  edit.rs  help.rs  list.rs  mod.rs  model.rs  profile.rs  prompt.rs  quit.rs  switch.rs  sysprompt.rs  tools.rs
src/config/: cache_config.rs  mod.rs  profiles_config.rs  rustyline_config.rs  user_config.rs
src/tool/: mod.rs  tools.rs
src/tool/tools_impl/: git_diff.rs  git_status.rs  grep.rs  mod.rs  pwd.rs
src/tools/: tool_processor.rs  tools.rs
src/tools_impl/: git_diff.rs  git_status.rs  mod.rs  pwd.rs
