[package]
name = "cforge"
version = "0.1.12"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
tempfile = "3.20.0"
rustyline = "16.0.0"
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json"] }
