[package]
name = "cforge"
version = "0.9.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.3"
tempfile = "3.20.0"
rustyline = "17.0.1"
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json"] }
regex = "1.11.1"
lazy_static = "1.5.0"
colored = "3.0.0"
dirs-next = "2.0.0"